--- a/wp-content/themes/intrepid/css/global/global.scss
+++ b/wp-content/themes/intrepid/css/global/global.scss
@@ -161,3 +161,131 @@ p {
     vertical-align: middle;
     width: 1em;
 }
+
+html.pdf-modal-show, html.pdf-modal-show body {
+    overflow: hidden
+}
+
+.pdf-modal-wrap {
+    display: none;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    z-index: 99999;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .5)
+}
+
+.pdf-modal-wrap .inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%
+}
+
+.pdf-modal-wrap .modal-window {
+    background-color: #fff;
+    padding: 40px;
+    position: relative;
+    max-width: 530px
+}
+
+.pdf-modal-wrap .title {
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    line-height: 1.4
+}
+
+.pdf-modal-wrap .subtitle {
+    font-size: 12px;
+    margin-bottom: 15px
+}
+
+.pdf-modal-wrap .close {
+    font-size: 16px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    font-weight: 600;
+    color: #000;
+    display: block;
+    padding: 5px 7px;
+    line-height: 1;
+    cursor: pointer
+}
+
+.pdf-modal-wrap .close:hover {
+    background-color: #000;
+    color: #fff
+}
+
+.btn--red {
+    background-color: #8a0808;
+    border-color: #8a0808;
+    color: #fff
+}
+
+.btn--red:hover {
+    background-color: #fff;
+    color: #8a0808
+}
+
+.mt-17 {
+    margin-top: 17px
+}
+
+.hor_child_3 {
+    margin-top: 50px;
+    text-align: center
+}
+
+.hor_child_3 a {
+    color: #000;
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: 4.8px;
+    padding: 17px 35px;
+    font-weight: 300;
+    border-right: 1px solid #979797 !important
+}
+
+@media screen and (max-width: 767px) {
+    .hor_child_3 a {
+        font-size: 16px;
+        padding: 6px 20px;
+        letter-spacing: 3px
+    }
+}
+
+@media screen and (max-width: 370px) {
+    .hor_child_3 a {
+        padding: 6px 10px 6px 4px;
+        letter-spacing: 1px
+    }
+}
+
+.hor_child_3 a:last-child {
+    border-right: none !important
+}
+
+.hor_child_3 a.active {
+    font-weight: 700
+}
+
+@media screen and (max-width: 767px) {
+    .hor_child_3 a.active {
+        font-weight: 400
+    }
+}
